plugins {
	id 'org.springframework.boot' version '2.6.11'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'cmc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.projectlombok:lombok'

	implementation 'mysql:mysql-connector-java'
	runtimeOnly 'mysql:mysql-connector-java'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//lombok
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '3.10'
	implementation 'org.bouncycastle:bcpkix-jdk15on:1.50'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	implementation group: 'com.hynnet', name: 'json-lib', version: '2.4'
//	compile group: 'org.openjsse.openeddsa', name: 'openeddsa', version: '1.1.0'
//	implementation 'http://hg.openjdk.java.net/jdk7/jdk7'



	//swagger
	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'

	//FCM
//	implementation 'com.google.firebase:firebase-admin:9.0.0'
//	implementation 'com.squareup.okhttp3:okhttp:4.10.0'

	//amazon s3
//	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//소셜 로그인
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	implementation 'org.apache.commons:commons-lang3:3.12.0'

	//amazon s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	//point
	implementation group: 'org.locationtech.jts', name: 'jts-core', version: '1.16.1'

	//fcm
	implementation 'com.google.firebase:firebase-admin:9.0.0'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
//tasks.withType(JavaCompile) {
//	configure(options) {
//		options.compilerArgs << '-Xlint:deprecation' << '-Xlint:unchecked' // examples
//	}
//}


jar {
	enabled = false
}
